kubernetes/apps/testing/echo/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    gateway.supermorphic.com/access: internal
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
