kubernetes/apps/testing/echo/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: testing
  labels:
    app.kubernetes.io/name: echo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: echo
